--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Ваши текущие зависимости
 pandas>=1.5.0
 numpy>=1.21.0
 scikit-learn>=1.0.0
@@ -5,3 +6,22 @@ matplotlib>=3.5.0
 seaborn>=0.11.0
 jupyter>=1.0.0
 notebook>=6.0.0
+
+# Для сбора данных
+requests>=2.28.0
+praw>=7.7.0          # Для Reddit API
+
+# Для NLP (самое важное!)
+transformers>=4.30.0
+torch>=2.0.0
+sentence-transformers>=2.2.0
+spacy>=3.5.0
+nltk>=3.8.0
+
+# Для дашборда
+streamlit>=1.28.0
+plotly>=5.15.0
+
+# Для конфигов
+python-dotenv>=1.0.0
+pyyaml>=6.0
